GREEN - included repository layer, and db configuration to complete api test flow